cambios de open id connect sobre blog falllando

--- a/autenticacionOAuth2.0/blog/package.json
+++ b/autenticacionOAuth2.0/blog/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon --inspect index"
+    "dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
