--- a/autenticacionOAuth2.0/admin/package.json
+++ b/autenticacionOAuth2.0/admin/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth0-js": "^9.13.2",
     "babel-plugin-transform-define": "^2.0.0",
     "dotenv": "^8.2.0",
     "isomorphic-fetch": "^2.2.1",
